/***********************************************************************
 X3 ChangeLog

2006-06-12  Neil Spierling <sirvulcan@gmail.com>

	* x3.conf.example: Commented out SpamServ module as there are bugs
	and i cant give a definate date as to when i can fix it. Im not
	home much these days.

	* src/mod-memoserv.c: Redid the SET code using some whatnet code
	by wasted. Tweaked here and there. Also added some formatting in
	LIST and SET like chanserv SET. Oh and MemoServ will join
	autojoin_channels if MemoServ is in a seperate nickname.

	* src/mod-memoserv.help: Added OSET and done some tweaking.

	* src/nickserv.c: Allow the use of get_victim_oper outside of
	nickserv.c.

	* src/nickserv.h: Allow the use of get_victim_oper outside of
	nickserv.c.

2006-06-07  Alex Schumann  <rubin@afternet.org>

	* src/chanserv.help: Added a couple set helps that were missing.
	
	* src/helpfile.c: fix missing space in multi-column table output such
	as /msg opserv commands * (with nickserv tablewidth setting >60)

2006-06-06  Alex Schumann  <rubin@afternet.org>

	* src/opserv.c: Change how addalert silence works, so that its a
	parameter instead of an action, and also works with trace now. 

	* x3.conf.example: Added a config setting of level needed to use 
	'silent yes' in trace/addalert.

2006-06-04  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.c: Fix oregister

	* src/nickserv.help: Update help for oregister

2006-06-05  Neil Spierling  <sirvulcan@gmail.com>

	* src/proto-p10.c: Properly handle incomming manual silences.

2006-06-05  Neil Spierling  <sirvulcan@gmail.com>

	* src/common.h: pretty_mask etc declerations.

	* src/nickserv.c: Parse the mask through pretty_mask before adding
	it. Normal ircd side silences go through this, this just keeps
	things looking the same and if a user tries to remove a silence
	added by ADDIGNORE they will be able to. Oh and I HATE GLIBC :P

	* src/proto-p10.c: Send a + if adding a silence.
