@@ -509,6 +509,7 @@
         "bot" "MemoServ";
         "message_expiry" "30d"; // age when messages are deleted; set
                                 // to 0 to disable message expiration
+        "limit" "30" // Max amount of messages a person can get.
     };
 };
 
